--- a/.classpath
+++ b/.classpath
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre7"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/ServerIO"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.launching.macosx.MacOSXType/Java SE 8"/>
 	<classpathentry kind="lib" path="/ServerIO/lib/log4j-1.2.15.jar"/>
 	<classpathentry kind="lib" path="/ServerIO/lib/mina-core-1.1.7.jar"/>
 	<classpathentry kind="lib" path="/ServerIO/lib/slf4j-api-1.6.0.jar"/>
@@ -10,5 +9,7 @@
 	<classpathentry kind="lib" path="/ServerIO/lib/commons-logging-1.1.1.jar"/>
 	<classpathentry kind="lib" path="/ServerIO/lib/commons-configuration-1.6.jar"/>
 	<classpathentry kind="lib" path="/ServerIO/lib/commons-lang-2.4.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/NetIO"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/DataPlatform"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
